Adding model for songs in application to share among Intents, adding listenrs for checkboxes
Adding Adapters for band and for songs in one band. Adding Activities for bands and for songs ina one band. Wrote new comperator for names of bands

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,14 @@
             android:name=".FavoriteActivity"
             android:label="Favorite">
         </activity>
+        <activity
+            android:name=".BandsSingerActivity"
+            android:label="BandSinger">
+        </activity>
+        <activity
+            android:name=".BandActivity"
+            android:label="ElektryczneGitary">
+        </activity>
     </application>
 
 </manifest>
