Some corrections in the layout, naming and indentation in the code. Removal of unnecessary code and unnecessary files

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,11 +26,11 @@
             android:label="Favorite">
         </activity>
         <activity
-            android:name=".BandsSingerActivity"
+            android:name=".OnlyBandsSingerActivity"
             android:label="Music Bands and Singers">
         </activity>
         <activity
-            android:name=".BandActivity">
+            android:name=".SongsInBandActivity">
         </activity>
         <activity
             android:name=".SingleSongActivity">
